<resources>
    <string name="app_name">Plutocrat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_title">Welcome to Plutocrat</string>
    <string name="welcome_content"><![CDATA[Use Shares to buy out other players.<br /> The player with the most buyouts is the Plutocrat.<br /> Match buyout offers to stay in the game.<br /> <br /> Failing to match a buyout within 48 hours results in <strong>permanent account suspension</strong>. Your remaining shares go to victor.]]></string>
    <string name="register_title">Register</string>
    <string name="caption_create_new_member">Create new member</string>
    <string name="caption_forgot_password">Forgot password?</string>
    <string name="caption_register_agreement">by registering you agree to:</string>
    <string name="caption_already_member">Already a member? Login</string>
    <string name="caption_or">or</string>
    <string name="caption_accept">Accept</string>
    <string name="caption_enter">Enter</string>
    <string name="caption_login">Login</string>
    <string name="caption_back">Back</string>
    <string name="caption_save">Save</string>
    <string name="caption_acquire">BUY</string>
    <string name="caption_get">GET</string>
    <string name="caption_check">CHECK</string>
    <string name="caption_login_link"><![CDATA[<u>Login</u>]]></string>
    <string name="caption_displayname">Display Name</string>
    <string name="caption_email">E-mail</string>
    <string name="cation_password">Password</string>
    <string name="caption_forgotpw">Forgot Password</string>
    <string name="caption_register">Register</string>
    <string name="caption_forgotpw_link"><![CDATA[<u>Forgot Password</u>]]></string>
    <string name="caption_register_link"><![CDATA[<u>Register</u>]]></string>
    <string name="caption_pwreset1">Password Reset: Step 1</string>
    <string name="pwreset_content">Request a password reset token with the form below. You will receive your token via email if an account with the provided email address exists.</string>
    <string name="caption_requestrstoken">Request Reset Token</string>
    <string name="signin_title">Sign in</string>
    <string name="caption_submit">Submit</string>
    <string name="have_token_content">Tab here if you already have a password reset token. Note: Tokens expire after a few hours.</string>
    <string name="caption_pwreset2">Password Reset: Step 2</string>
    <string name="pwreset2_content">Copy and paste the password reset token form your email into the form below and enter a new password.</string>
    <string name="caption_resetpw">Reset Password</string>
    <string name="caption_resettoken">Reset Token</string>
    <string name="caption_new_password">New Password</string>
    <string name="caption_reset">Reset</string>
    <string name="caption_manage_account">Manage Account</string>
    <string name="home_default_content"><![CDATA[You need <a href="">%1$d more buyouts</a> to become the Plutocrat.<br /><br />Swipe right for more controls]]></string>
    <string name="home_threat_content"><![CDATA[WARNING: Your response to this buyout threat is not reversible. You must match the buyout shares to maintain your account.<br /><br />Failure to match the buyout will result in permanent account suspension. Any shares remaining in your account will transfer to the victor.]]></string>
    <string name="home_suspend_content"><![CDATA[You were bought out by <i>%1$s</i> for<br /><br />%2$s %3$s.<br /><br />Your account is now inactive.]]></string>
    <string name="caption_success_buyout">Successful\nBuyouts</string>
    <string name="caption_failed_buyout">Failed\nBuyouts</string>
    <string name="caption_defeat_threat">Defeated\nThreats</string>
    <string name="caption_survival_time">Survival Time</string>
    <string name="caption_active_threat">Active Buyout Threat</string>
    <string name="caption_you_survived">You Survived</string>
    <string name="caption_accept_defeat">ACCEPT DEFEAT</string>
    <string name="caption_match_shares">MATCH SHARES</string>
    <string name="caption_engage">ENGAGE</string>
    <string name="caption_no_plutocrat">No Reigning Plutocrat</string>
    <string name="caption_plutocrat">The Plutocrat</string>
    <string name="caption_action_initiate">You initiated with</string>
    <string name="caption_action_threat">Threated you with</string>
    <string name="caption_attacking">Attacking You</string>
    <string name="caption_eliminated">Eliminated</string>
    <string name="caption_under_threat">Under Threat</string>
    <string name="value_plutocrat_buyouts">%1$d Buyouts</string>
    <string name="value_buyouts">Buyouts: %1$d</string>
    <string name="value_threats">Threats: %1$d</string>
    <string name="value_daysurvived">Day survived: %1$d</string>
    <string name="value_period">%1$d share %2$s ago</string>
    <string name="values_period">%1$d shares %2$s ago</string>
    <string name="status_pending">Outcome Pending</string>
    <string name="status_succeed">Buyout Succeeded</string>
    <string name="status_failed">Buyout Failed</string>
    <string name="initiate_content"><![CDATA[Buyout attempts are not reversible. Your shares will be debited regardless of the outcome.<br /><br />Minimum share requirements apply to repeat buyout attempts. Each subsequent attempt against the same target requires at least twice the previous number of shares.]]></string>
    <string name="caption_available_shares">Available Shares: %1$d</string>
    <string name="caption_minimum_buyout">Minimum Buyout: %1$d</string>
    <string name="caption_initiate_with">Initiate Buyout With</string>
    <string name="caption_share">Share</string>
    <string name="caption_shares">Shares</string>
    <string name="caption_abort">ABORT</string>
    <string name="caption_execute">EXECUTE</string>
    <string name="caption_moreshares">BUY MORE SHARES...</string>
    <string name="title_unused_shares">%1$d Unused Shares</string>
    <string name="title_success_buyout">%1$d Successful Buyouts</string>
    <string name="caption_quantity">Quantity:</string>
    <string name="caption_per_share">Per Share:</string>
    <string name="caption_enter_quantity">Enter Quantity</string>
    <string name="title_faq">FAQ</string>
    <string name="header_faq_plutocrat">Plutocrat</string>
    <string name="note_faq_plutocrat"><![CDATA[Use Shares to buy out other players. The player with the most buyouts is the Plutocrat. Match buyout offers to stay in the game.<br /><br />Failing to match a buyout within 48 hours results in <b>permanent account suspension</b>. Your remaining shares go to the victor.]]></string>
    <string name="header_faq_whatshare">What is share?</string>
    <string name="note_faq_whatshare">Shares are your primary means of attacking and defending in Plutocrat. You can buy other players out of the game by challenging them to match your buyout offer (some number of shares).\n\nIf someone else attempts to buy you out, you have to match their buyout offer with an equal number of shares in order to stay in the game.</string>
    <string name="header_faq_moreshare">What if I don\'t have enough shares to match a buyout?</string>
    <string name="note_faq_moreshare">Everyone starts with 1 share. If you need more, navigate to the Shares view via the bottom navigation bar to purchase more.</string>
    <string name="title_account_settings">ACCOUNT</string>
    <string name="title_account">Account</string>
    <string name="note_account_settings_change_profile">tap to change</string>
    <string name="note_account_settings_enable_notification">Enable email notification on Plutocrat events (buyout outcomes, new threats, etc).</string>
    <string name="note_account_settings_enable_updates">Enable emails with general Plutocrat updates.</string>
    <string name="caption_confirm_password">Confirm Password</string>
    <string name="caption_current_password">Current Password</string>
    <string name="note_account_setting_current_password">Your current password is required to change your password.</string>
    <string name="caption_total">Total:</string>
    <string name="title_about">About</string>
    <string name="caption_eula">EULA</string>
    <string name="caption_privacy">PRIVACY</string>
    <string name="caption_getting_started">Getting Started</string>
    <string name="note_getting_started">Buy out other players to become the Plutocrat. You may target any player who is not already under threat.</string>
    <string name="note_enable_push_notice"><![CDATA[We’ll notify you when your buyouts succeed or fail.]]></string>
    <string name="caption_find_target">FIND TARGET</string>
    <string name="caption_enable_push_notice">Enable notification</string>
    <string name="dialog_note_enable_push_notice">Are you sure to enable notification?</string>
    <string name="caption_enable">ENABLE</string>
    <string name="caption_dismiss">DISMISS</string>
    <string name="dialog_title_moreshare">Your share is not sufficient</string>
    <string name="dialog_content_moreshare">Do you want to buy more shares?</string>
    <string name="caption_close">Close</string>
    <string name="caption_share_to_match">Shares to match: %1$d</string>
    <string name="caption_no_target_list">No Targets</string>
    <string name="caption_no_buyout_list">No Buyouts</string>
    <string name="caption_deadline_time">Deadline:</string>
    <string name="save_successfully">Save successfully</string>
    <string name="menu_manage_account">Manage Account</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="loading_default">Loading...</string>
    <string name="caption_select_image">Select image</string>
    <string name="caption_take_from_camera">Take from camera</string>
    <string name="caption_take_from_gallery">Take from gallery</string>
    <string name="error_input_shares_number">Please input number of shares</string>
    <string name="error_iap_default">In-app error occur.</string>
    <string name="error_iap_buy">IAP buy error occur.</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_profile_picture">Please try again.</string>
    <string name="error_suspending">It may take a few minutes to proceed, please log in again. Sorry for any inconvenience caused.</string>
    <string name="error_buy_share">Please contact our staff.</string>
    <string name="error_cannot_send_email">Please contact our staff.</string>
    <string name="error_connection">Cannot connect to server.</string>
    <string name="error_title_cannot_new_buyout">Cannot engage target</string>
    <string name="error_title_cannot_execute_buyout">Cannot execute target</string>
    <string name="error_title_cannot_save_settings">Cannot save settings</string>
    <string name="error_title_cannot_register">Cannot register</string>
    <string name="error_title_authenticate_failed">Authentication failed</string>
    <string name="error_title_cannot_match_shares">Cannot match shares</string>
    <string name="error_title_cannot_save_picture">Cannot save profile picture</string>
    <string name="error_title_suspending">Your account is being suspended</string>
    <string name="error_title_buy_share">Cannot purchase shares</string>
</resources>