<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="com.whitefly.plutocrat.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="490dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlo_reset1_main"
            android:layout_marginTop="@dimen/margin_login"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_pwreset1"
                    android:id="@+id/tv_reset1_title"
                    style="@style/HeaderText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_reset_note"
                    android:id="@+id/tv_reset1_content"
                    android:text="@string/pwreset_content"
                    style="@style/NoteText"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_requestrstoken"
                    android:id="@+id/tv_reset1_caption"
                    style="@style/HeaderTextWithLine"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_reset1_email"
                    android:hint="@string/caption_email"
                    style="@style/LoginEditText"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_submit"
                    android:id="@+id/btn_reset1_submit"
                    style="@style/DefaultButton"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/havetoken_content"
                    android:id="@+id/tv_reset1_note"
                    style="@style/NoteText"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_login"
                android:id="@+id/tv_reset1_login_link"
                style="@style/LinkText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_register"
                android:id="@+id/tv_reset1_register_link"
                style="@style/LinkText"/>
         </LinearLayout>
    </RelativeLayout>

</ScrollView>
