<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="com.whitefly.plutocrat.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:paddingStart="@dimen/background_padding_reset_password1"
        android:paddingEnd="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height_reset_password">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlo_reset1_main"
                android:layout_marginTop="@dimen/margin_login"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caption_pwreset1"
                        android:id="@+id/tv_reset1_title"
                        style="@style/HeaderText.White"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_reset_note"
                        android:id="@+id/tv_reset1_content"
                        android:text="@string/pwreset_content"
                        style="@style/NoteText.White"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout2"
                    android:layout_below="@+id/linearLayout"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/caption_requestrstoken"
                        android:id="@+id/tv_reset1_caption"
                        style="@style/HeaderTextWithLine.White"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edt_reset1_email"
                        android:hint="@string/caption_email"
                        style="@style/LoginEditText.White"
                        android:imeOptions="actionDone"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/button_login_margin"
                        android:text="@string/caption_submit"
                        android:id="@+id/btn_reset1_submit"
                        style="@style/OutlineButton"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/have_token_content"
                        android:id="@+id/tv_reset1_note"
                        style="@style/NoteText.White"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_login_margin"
                android:layout_alignParentBottom="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/caption_login"
                    android:id="@+id/btn_reset1_login_link"
                    style="@style/OutlineButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/caption_register"
                    android:id="@+id/btn_reset1_register_link"
                    style="@style/OutlineButton"/>
             </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
